--- a/projects/metis-ui/tsconfig.app.json
+++ b/projects/metis-ui/tsconfig.app.json
@@ -2,14 +2,16 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/app",
-    "types": []
+    "baseUrl": "./",
+    "outDir": "../../dist/out-tsc",
+    "types": ["node"]
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "test-data"
   ]
 }
